syntax = "proto3";

option java_package = "io.github.mirrormingzz.mapstruct.protobuf.demo.domain";
option java_outer_classname = "BaseProtos";

import "google/protobuf/any.proto";
message TestAny {
  string message = 1;
  repeated google.protobuf.Any details = 2;
}